[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nabla"
version = "0.1.1"
description = "Analyze HuggingFace model capabilities using LLM inference"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Developer" }]
dependencies = [
    "huggingface_hub>=0.20.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
nabla = "nabla.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["nabla"]

[tool.ruff]
line-length = 100
target-version = "py310"
